# odoo-sync

./: .env.example  .gitignore  .odoo-sync.env  AI_SYSTEM_PROMPT.md  MANIFEST.in  README.md  README_INSTALL.md  pyproject.toml  requirements.txt
.odoo-agent-rules/: main.md.bak.20260302033217  specs.md.bak.20260302033217
docs/: API_INTEGRATION_SUMMARY.md  README.md  README_API_INTEGRATION.md  odoo_api_integration_guide.md  odoo_api_python_examples.py
docs/api-reference/: README.md  api-comparison.md
docs/architecture/: multi-agent-timesheets.md
scripts/: sync_pull.py  sync_push.py  test_ai_timer.py
src/ai/: agent_interface.py
src/cli/: importer.py  main.py  markdown_parser.py
src/models/: task.py
src/sync/: odoo_client.py  sync_manager.py
tests/: test_task_create_import.py
